# strands-agents-to-cloudtrail-mcp

./: .gitignore  README.md  cdk.json  env.example  package-lock.json  package.json  tsconfig.json
.kiro/steering/: architecture.md  behavior.md  development.md  product.md
app/: Dockerfile  components.py  deploy.sh  main.py  requirements.txt
docs/: architecture-diagram.md  implementation.md
lambda/: Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  run.sh  test_client.py
lambda/app/: __main__.py  main.py
lambda/cloudtrail_mcp/: main.py
lambda/mcpserver/: main.py
lib/: application-stack.ts  config.ts  iam-stack.ts  infrastructure-stack.ts  stack.ts
